--- a/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
@@ -58,29 +58,34 @@
                 <div></div>
                 请输入账户名和密码
             </div>
-            <ul>
-                <li class="top_1">
-                    <img src="/static/login/JD_img/user_03.png" class="err_img1"/>
-                    <input type="text" placeholder=" 邮箱/用户名/已验证手机" class="user"/>
-                </li>
-                <li>
-                    <img src="/static/login/JD_img/user_06.png" class="err_img2"/>
-                    <input type="password" placeholder=" 密码" class="password"/>
-                </li>
-                <li class="bri">
-                    <a href="">忘记密码</a>
-                </li>
-                <li class="ent">
-                    <button class="btn2"><a class="a">登 &nbsp; &nbsp;录</a></button>
-                </li>
-            </ul>
+            <form action="/login" method="post">
+                <div style="color: red"
+                     th:text="${errors != null? (#maps.containsKey(errors,'msg') ? errors.msg:'') : ''}"></div>
+
+                <ul>
+                    <li class="top_1">
+                        <img src="/static/login/JD_img/user_03.png" class="err_img1"/>
+                        <input name="loginacct" type="text" placeholder=" 邮箱/用户名/已验证手机" class="user"/>
+                    </li>
+                    <li>
+                        <img src="/static/login/JD_img/user_06.png" class="err_img2"/>
+                        <input name="password" type="password" placeholder=" 密码" class="password"/>
+                    </li>
+                    <li class="bri">
+                        <a href="">忘记密码</a>
+                    </li>
+                    <li class="ent">
+                        <button class="btn2" type="submit"><a>登 &nbsp; &nbsp;录</a></button>
+                    </li>
+                </ul>
+            </form>
+
         </div>
         <div class="si_out">
             <ul>
                 <li>
-                    <a href="#">
-                        <img src="/static/login/JD_img/qq.png"/>
-                        <span>QQ</span>
+                    <a href="https://api.weibo.com/oauth2/authorize?client_id=1734806084&response_type=code&redirect_uri=http://gulimall.com/oauth2.0/weibo/success">
+                        <img width="50px" height="18px" src="/static/login/JD_img/weibo.png"/>
                     </a>
                 </li>
                 <li class="f4"> |</li>
