--- a/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
@@ -84,7 +84,8 @@
         <div class="si_out">
             <ul>
                 <li>
-                    <a href="https://api.weibo.com/oauth2/authorize?client_id=1734806084&response_type=code&redirect_uri=http://gulimall.com/oauth2.0/weibo/success">
+                    <a
+                            href="https://api.weibo.com/oauth2/authorize?client_id=1734806084&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">
                         <img width="50px" height="18px" src="/static/login/JD_img/weibo.png"/>
                     </a>
                 </li>
