--- a/gulimall-product/gulimall-product-biz/src/main/resources/templates/index.html
+++ b/gulimall-product/gulimall-product-biz/src/main/resources/templates/index.html
@@ -96,10 +96,13 @@
             </b>
             <ul>
                 <li>
-                    <a href="http://auth.gulimall.com/login.html">你好，请登录</a>
+                    <a href="http://auth.gulimall.com/login.html"
+                       th:text="${session.loginUser!=null ? '欢迎您,'+session.loginUser.username:'你好，请登录'}">你好，请登录
+                    </a>
                 </li>
                 <li>
-                    <a href="http://auth.gulimall.com/reg.html" class="li_2">免费注册</a>
+                    <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html" class="li_2">免费注册
+                    </a>
                 </li>
                 <span>|</span>
                 <li>
