添加购物车模块

--- a/gulimall-product/gulimall-product-biz/src/main/resources/templates/item.html
+++ b/gulimall-product/gulimall-product-biz/src/main/resources/templates/item.html
@@ -645,7 +645,7 @@
 
                 <div class="box-btns clear">
                     <div class="box-btns-one">
-                        <input type="text" name="" id="" value="1"/>
+                        <input type="text" name="" id="numInput" value="1"/>
                         <div class="box-btns-one1">
 
                             <div>
@@ -662,8 +662,8 @@
                         </div>
                     </div>
                     <div class="box-btns-two">
-                        <a href="/static/item/../商品分类\index.html">
-                            立即预约
+                        <a href="#" id="addToCartA" th:attr="skuId=${item.getInfo().getSkuId()}">
+                            加入购物车
                         </a>
                     </div>
                     <div class="box-btns-three">
@@ -1361,6 +1361,12 @@
     $(function () {
         $(".sku_attr_value").parent().css({"border": "solid 1px #CCC"});
         $("a[class='sku_attr_value checked']").parent().css({"border": "solid 1px red"});
+    })
+    $("#addToCartA").click(function () {
+        var num =  $("#numInput").val()
+        var skuId = $(this).attr("skuId")
+        location.href = "http://cart.gulimall.com/addToCart?skuId="+skuId+"&num="+num;
+        return false;
     })
 </script>
 
