--- a/gulimall-cart/gulimall-cart-biz/src/main/resources/templates/success.html
+++ b/gulimall-cart/gulimall-cart-biz/src/main/resources/templates/success.html
@@ -27,8 +27,8 @@
 
         <ul class="hd_wrap_right">
             <li class="forel">
-                <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser == null }"class="link_login">你好,请登录</a>&nbsp;
-                <a  th:else class="link_login">[[${session.loginUser.username}]]</a>&nbsp;
+                <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser == null }" class="link_login">你好,请登录</a>&nbsp;
+                <a th:else class="link_login">[[${session.loginUser.username}]]</a>&nbsp;
                 <a href="http://auth.gulimall.com/reg.html" class="link_regist">免费注册</a>
             </li>
             <li class="spacer"></li>
@@ -72,15 +72,15 @@
                         <div class="p-item">
                             <div class="p-img">
                                 <a href="/javascript:;" target="_blank"><img style="height: 60px;width:60px;"
-                                                                             th:src="${skuInfo?.skuDefaultImg}"
+                                                                             th:src="${item.image}"
                                                                              src="/static/cart/img/shop1.jpg"></a>
                             </div>
                             <div class="p-info">
                                 <div class="p-name">
-                                    <a th:href="'http://item.gmall.com/'+${skuInfo?.id}+'.html'"
-                                       th:text="${skuInfo?.skuName}">TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
+                                    <a th:href="'http://item.gulimall.com/'+${item.skuId}+'.html'"
+                                       th:text="${item.title}">TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
                                 </div>
-                                <div class="p-extra"><span class="txt" th:text="'数量：'+${skuNum}">  数量：1</span></div>
+                                <div class="p-extra"><span class="txt" th:text="'数量：'+${item.count}">  数量：1</span></div>
                             </div>
                             <div class="clr"></div>
                         </div>
@@ -92,8 +92,8 @@
                         <div class="clr"></div>
                         <div class="bg_shop">
                             <a class="btn-tobback"
-                               th:href="'http://item.gmall.com:8084/'+${skuInfo?.id}+'.html'">查看商品详情</a>
-                            <a class="btn-addtocart" href="http://cart.gmall.com:8087/cartList"
+                               th:href="'http://item.gulimall.com/'+${item.skuId}+'.html'">查看商品详情</a>
+                            <a class="btn-addtocart" href="http://cart.gulimall.com/cart.html"
                                id="GotoShoppingCart"><b></b>去购物车结算</a>
                         </div>
                     </div>
