--- a/gulimall-cart/gulimall-cart-biz/src/main/resources/templates/cartList.html
+++ b/gulimall-cart/gulimall-cart-biz/src/main/resources/templates/cartList.html
@@ -25,7 +25,7 @@
                 <li>
                     <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser == null }"
                        style="color: red;">你好，请登录</a>
-                    <a th:else style="color: red;">[[${session.loginUser.username}]]</a>
+                    <a th:if="${session.loginUser != null }" style="color: red;">[[${session.loginUser.username}]]</a>
                 </li>
                 <li><a th:if="${session.loginUser == null }" href="http://auth.gulimall.com/login.html">免费注册</a></li>
                 <li class="spacer"></li>
