添加 search 服务配置

--- a/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
@@ -60,6 +60,7 @@
             </div>
             <form action="/login" method="post">
                 <div style="color: red"
+                     [[${errors}]]
                      th:text="${errors != null? (#maps.containsKey(errors,'msg') ? errors.msg:'') : ''}"></div>
 
                 <ul>
