--- a/gulimall-cart/gulimall-cart-biz/src/main/resources/templates/success.html
+++ b/gulimall-cart/gulimall-cart-biz/src/main/resources/templates/success.html
@@ -68,7 +68,7 @@
     <div class="success-wrap">
         <div class="w" id="result">
             <div class="m succeed-box">
-                <div class="mc success-cont">
+                <div class="mc success-cont" th:if="${item != null}">
                     <div class="success-lcol">
                         <div class="success-top"><b class="succ-icon"></b>
                             <h3 class="ftx-02">商品已成功加入购物车</h3></div>
@@ -100,6 +100,10 @@
                                id="GotoShoppingCart"><b></b>去购物车结算</a>
                         </div>
                     </div>
+                </div>
+
+                <div class="mc success-cont" th:if="${item == null}">
+                    <h2>购物车无商品</h2> <a href="http://gulimall.com">去购物</a>
                 </div>
             </div>
         </div>
